# VocabBuilder

./: .gitignore  CMakeLists.txt  FIleParser.h  FileParser.cpp  FileProcessingService.cpp  FileProcessingService.h  IFileParser.h  LICENSE  MainWindow.cpp  README.md  WordDefinitionFetcher.cpp  WordDefinitionFetcher.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: IFileParser.h  MainWindow.h
resources/: MainWindow.ui
src/: FileParser.cpp  FileProcessingService.cpp  MainWindow.cpp  WordDefinitionFetcher.cpp  main.cpp
